# clawteam

./: .gitignore  .npmrc  QWEN.md  README.mbt.md  check_output.txt  check_result.txt  clawteam.mbt  errors.mbt  moon.mod.json  moon.pkg  moon_test_output.txt  moonbit2026.md  package.json  pkg.generated.mbti  pnpm-lock.yaml  test_integration.ts  test_result.txt  types.mbt  vitest.config.ts
.qwen/: settings.json  settings.json.orig
_build/: packages.json
acp/: backend.mbt  backend_wbtest.mbt  chat.mbt  chat_wbtest.mbt  moon.pkg  pkg.generated.mbti  runner.mbt  runner_wbtest.mbt  runtime.mbt  runtime_wbtest.mbt  ui_events.mbt  ui_events_wbtest.mbt  ui_snapshot.mbt  ui_snapshot_wbtest.mbt  ui_types.mbt
agent/: README.mbt.md  agent.mbt  agent_event.mbt  agent_prompt.mbt  agent_skill_test.mbt  agent_test.mbt  agent_tool.mbt  agent_wbtest.mbt  moon.pkg  pkg.generated.mbti
ai/: README.mbt.md  convert.mbt  message.mbt  message_test.mbt  pkg.generated.mbti
bridge/: wasm_bridge.ts
channel/: adapters.mbt  extension.mbt  extension_registry.mbt  extension_wbtest.mbt  moon.pkg  pkg.generated.mbti  registry.mbt  types.mbt
clock/: clock.mbt  moon.pkg  time.mbt  timestamp.mbt
cmd/: README.mbt.md
config/: moon.pkg
doc/: DATABASE.md  DEVELOPING.md  OPENCLAW_ONBOARDING.md  RELEASING.md  SPEC-implementation.md  SPEC.md
event/: README.mbt.md  event.mbt  event_target.mbt  event_test.mbt  external_event.mbt  moon.pkg  pkg.generated.mbti
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/examples/: main.py
sdk/python/maria/: __init__.py  events.py
(+2656 files in other folders)
